--- a/templates/evaluation.html
+++ b/templates/evaluation.html
@@ -4,17 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        
     <title>SQuAD Analysis</title>
 
-    </script>
 </head>
 <style>
     .modal-body pre {
@@ -47,7 +45,9 @@
                     Predictions
                 </h4>
                 <div class="modal-body-all">
-                    <pre id="nall" class="text-dark bg-info p-2"></pre>
+                    <pre id="nall" class="text-dark bg-info p-2">
+                        
+                    </pre>
                     </h1>
                 </div>
                 </div>
@@ -64,7 +64,8 @@
                         <input type="text" onchange={getNBest()} value="10" class="form-control"
                             aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" id="nbest_val"> 
                     </div>
-                    <pre id="nbest" class="text-dark bg-info p-2"></pre>
+                    <pre id="nbest" class="text-dark bg-info p-2">
+                    </pre>
                     </h1>
                 </div>
             </div>
@@ -81,6 +82,7 @@
                             aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" id="nworst_val">
                     </div>
                     <pre id="nworst" class="text-dark bg-info p-2">
+
                     </pre>
                 </div>
             </div>
@@ -147,30 +149,32 @@
     <script>
 
         function getNBest() {
-            const nb = document.getElementById('nbest_val').value;
-            labels = JSON.parse({{ dataJson | tojson }})
+            const nw = document.getElementById('nbest_val').value;
+            labels = JSON.parse({{ dataJson | safe |tojson }});
+            var Dsize = {{datalen}};
             var tep = [];
-            for (let i = 0; i < nb; i++) {
+            for (let i = Dsize-1; i >Dsize-1-nw; i--) {
                 tep.push(labels[i]);
             }
             document.getElementById("nbest").innerText = JSON.stringify(tep, null, 2);
         };
 
         function getNWorst() {
-            const nw = document.getElementById('nworst_val').value;
-            console.log(nw);
-            labels = JSON.parse({{ dataJson | tojson }});
-            var Dsize = {{datalen}};
+            
+            const nb = document.getElementById('nworst_val').value;
+            labels = JSON.parse({{ dataJson | safe|tojson }})
             var tep = [];
-            for (let i = Dsize-1; i >Dsize-1-nw; i--) {
+            for (let i = 0; i < nb; i++) {
                 tep.push(labels[i]);
             }
             document.getElementById("nworst").innerText = JSON.stringify(tep, null, 2);
         };
 
         function getAll() {
-            labels = JSON.parse({{ dataJson | tojson }});
-            document.getElementById("nall").innerText = JSON.stringify(labels, null, 2);
+            labels = JSON.parse({{ dataJson | safe |tojson }});
+           document.getElementById("nall").innerText = JSON.stringify(labels, null, 2);
+       
+            
         };
         getAll();
         getNBest();
